--- a/styles/partials/_body.scss
+++ b/styles/partials/_body.scss
@@ -39,10 +39,18 @@ img {
         p {
             width: 350px;
             color: black;
-            
+            margin-top: 25px;
+            margin-left: 200px;
         }
     }
 }
+.col5 { 
+    .row {
+        p {
+            margin-top: 0;
+            margin-left: 0;        
+        }
+    }}
 .col-sm-4 {      
     h1 {
         float: right;
